# python-project-50

./: Makefile  README.md  pyproject.toml
env/: pyvenv.cfg
path/to/venv./: pyvenv.cfg
program_command/gendiff/: main.py
program_command/gendiff/scripts/: gendiff_h.py
