[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hatch>=1.14.1",
    "more-itertools>=10.8.0",
    "pytest>=8.4.2",
]


[tool.uv]
dev-dependencies = [
    "ruff>=0.7.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["program_command"]


[project.scripts]
gendiff = 'program_command.gendiff.scripts.gendiff_h:main'
